added loading files on http request

--- a/data/index.html
+++ b/data/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="jquery-3.6.3.min.js"></script>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <script src="bootstrap.min.js"></script>
-    <link rel="stylesheet" href="chartist.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap-5.2.3.min.css">
+    <script src="bootstrap-5.2.3.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="chartist.min.css">
     <script src="chartist.min.js"></script>
-    <link rel="icon" href="oszilloskop.png" type="image/png">
+    <link rel="icon" href="logo.ico" type="image/png">
     <title>oscilloscope</title>
 
     <style>
@@ -56,7 +56,7 @@
     <!-- navbar -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
         <span class="navbar-brand mb-0 h1">
-            <img src="oszilloskop.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="logo.ico" width="30" height="30" class="d-inline-block align-top" alt="">
             oszilloskop
         </span>
         </div>
@@ -269,6 +269,9 @@
             </div>
         </div>
     </div>
+
+    
+
     <script>
         var dataCH1 = [-1,-2,-3,-4,-5,1,2,3,4,5];
         var dataCH2 = [-2,-1,0,1,2,1,0,-1,-2,-1];
