bug fix, simple website loading works

--- a/data/index.html
+++ b/data/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="jquery-3.6.3.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="bootstrap-5.2.3.min.css">
-    <script src="bootstrap-5.2.3.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <script src="bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="chartist.min.css">
     <script src="chartist.min.js"></script>
     <link rel="icon" href="logo.ico" type="image/png">
