added first websocket part

--- a/data/index.html
+++ b/data/index.html
@@ -71,7 +71,7 @@
             -->
             <li class="nav-item">
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-link nav-link" data-toggle="modal" data-target="#wifiModal">
+                <button id="wifi" type="button" class="btn btn-link nav-link" data-toggle="modal" data-target="#wifiModal">
                     wifi
                 </button>
             </li>
