--- a/data/index.html
+++ b/data/index.html
@@ -57,8 +57,7 @@
 
         .battery #battery-text {
             position: relative;
-            text-align: center;
-            
+            text-align: center;    
         }
 
         .hide {
@@ -98,13 +97,14 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <div class="battery">
+                <div class="battery hide" id="battery">
                     <div id="battery-level"></div>
                     <div id="battery-text">
                         <svg id="loading" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="currentColor" d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09z"/></svg>
                         <strong id="battery-percent"></strong>
                     </div>
                 </div>
+                <svg id="error" width="40" height="40" viewBox="0 0 72 72" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" baseProfile="full" enable-background="new 0 0 76.00 76.00" xml:space="preserve" fill="#ff0a0a" stroke="#ff0a0a"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.152"></g><g id="SVGRepo_iconCarrier"> <path fill="#ff0000" fill-opacity="1" stroke-width="0.2" stroke-linejoin="round" d="M 19,22L 57,22L 57,31L 19,31L 19,22 Z M 55,24L 53,24L 53,29L 55,29L 55,24 Z M 51,24L 49,24L 49,29L 51,29L 51,24 Z M 47,24L 45,24L 45,29L 47,29L 47,24 Z M 21,27L 21,29L 23,29L 23,27L 21,27 Z M 19,33L 57,33L 57,42L 19,42L 19,33 Z M 55,35L 53,35L 53,40L 55,40L 55,35 Z M 51,35L 49,35L 49,40L 51,40L 51,35 Z M 47,35L 45,35L 45,40L 47,40L 47,35 Z M 21,38L 21,40L 23,40L 23,38L 21,38 Z M 46.75,53L 57,53L 57,57L 46.75,57L 44.75,55L 46.75,53 Z M 29.25,53L 31.25,55L 29.25,57L 19,57L 19,53L 29.25,53 Z M 29.5147,59.9926L 34.5073,55L 29.5147,50.0074L 33.0074,46.5147L 38,51.5074L 42.9926,46.5147L 46.4853,50.0074L 41.7426,55L 46.4853,59.9926L 42.9926,63.4853L 38,58.7426L 33.0074,63.4853L 29.5147,59.9926 Z M 36,46.25L 36,44L 40,44L 40,46.25L 38,48.25L 36,46.25 Z "></path> </g></svg>
             </li>
         </ul>
     </nav>
@@ -112,25 +112,31 @@
 
     <div class="container-fluid">
         <div class="row pt-2">
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="ct-chart ct-square"></div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="row">
                     <div class="col-6 p-1">
                         <div class="p-3 card bg-light text-dark text-center">
-                            <h7 class="text-center">Aquisition</h7>
-                            <button class="btn btn-success btn-block mt-2">Start</button>
-                            <button class="btn btn-danger btn-block">Stop</button>
-                            <button class="btn btn-warning btn-block">Clear</button>
-                            <select class="custom-select mt-2" id="inputGroupSelect01">
-                                <option selected>Choose...</option>
-                                <option value="1">Single shot</option>
-                                <option value="2">continues</option>
+                            <h5 class="text-center">Aquisition</h5>
+                            <button class="btn btn-danger btn-block mt-2" id="start">stop</button>
+                            <select class="custom-select mt-2" id="mode">
+                                <option value="single">Single shot</option>
+                                <option value="continues">continues</option>
+                                <option value="none" selected="selected">none</option>
+                            </select>
+                            <select class="custom-select mt-2" id="edge">
+                                <option selected value="rising">rising edge</option>
+                                <option value="faling">falling edge</option>
+                            </select>
+                            <select class="custom-select mt-2" id="channel">
+                                <option value="CH1">CH1</option>
+                                <option value="CH2">CH2</option>
                             </select>
                         </div>
                         <div class="p-3 mt-2 card bg-light text-dark text-center">
-                            <h7 class="text-center">Levels</h7>
+                            <h5 class="text-center">Levels</h5>
                             <div class="row">
                                 <div class="col-3 p-0">CH1</div>
                                 <div class="col-3 p-0">CH2</div>
@@ -154,7 +160,7 @@
                     </div>
                     <div class="col-6 p-1">
                         <div class="p-3 card bg-light text-dark text-center">
-                            <h7 class="text-center">Display</h7>
+                            <h5 class="text-center">Display</h5>
                             <div class="custom-control custom-switch mt-2">
                                 <input type="checkbox" checked="true" class="custom-control-input" id="selectCH1">
                                 <label class="custom-control-label" for="selectCH1">CH1</label>
@@ -169,7 +175,7 @@
                             </div>
                         </div>
                         <div class="p-3 mt-2 card bg-light text-dark text-center">
-                            <h7 class="text-center">Vertical</h7>
+                            <h5 class="text-center">Vertical</h5>
                             <div class="row mt-2">
                                 <label for="exampleFormControlSelect1" class="col-4 col-form-label">CH1</label>
                                 <div class="col-8">
@@ -190,7 +196,7 @@
                             </div>
                         </div>
                         <div class="p-3 mt-2 card bg-light text-dark text-center">
-                            <h7 class="text-center">Horizontal</h7>
+                            <h5 class="text-center">Horizontal</h5>
                             <div class="row m-2">
                                 <select class="form-control" id="exampleFormControlSelect1">
                                     <option>0.5us/div</option>
@@ -202,58 +208,31 @@
                             </div>
                         </div>
                         <div class="p-3 mt-2 card bg-light text-dark text-center">
-                            <h7 class="text-center">Trigger</h7>
-                            <div class="row m-2">
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline1" name="customRadioInline1"
-                                        class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline1">CH1</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline2" name="customRadioInline1"
-                                        class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline2">CH2</label>
-                                </div>
-                            </div>
-                            <div class="row ml-2 mr-2">
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline1" name="customRadioInline1"
-                                        class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline1">Rising</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline2" name="customRadioInline1"
-                                        class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline2">Falling</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="p-3 mt-2 card bg-light text-dark text-center">
-                            <h7 class="text-center">Probe</h7>
+                            <h5 class="text-center">Probe</h5>
                             <div class="row m-2">
                                 <div class="d-inline">CH1</div>
                                 <div class="custom-control custom-radio custom-control-inline ml-auto">
-                                    <input type="radio" id="customRadioInline1" name="customRadioInline1"
+                                    <input checked type="radio" id="CH1_1:1" name="CH1_1:1"
                                         class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline1">1:1</label>
+                                    <label class="custom-control-label" for="CH1_1:1">1:1</label>
                                 </div>
                                 <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline2" name="customRadioInline1"
+                                    <input type="radio" id="CH1_10:1" name="CH1_10:1"
                                         class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline2">10:1</label>
+                                    <label class="custom-control-label" for="CH1_10:1">10:1</label>
                                 </div>
                             </div>
                             <div class="row ml-2 mr-2">
                                 <div class="d-inline">CH2</div>
                                 <div class="custom-control custom-radio custom-control-inline ml-auto">
-                                    <input type="radio" id="customRadioInline1" name="customRadioInline1"
+                                    <input checked type="radio" id="CH2_1:1" name="CH2_1:1"
                                         class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline1">1:1</label>
+                                    <label class="custom-control-label" for="CH2_1:1">1:1</label>
                                 </div>
                                 <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="customRadioInline2" name="customRadioInline1"
+                                    <input type="radio" id="CH2_10:1" name="CH2_10:1"
                                         class="custom-control-input">
-                                    <label class="custom-control-label" for="customRadioInline2">10:1</label>
+                                    <label class="custom-control-label" for="CH2_10:1">10:1</label>
                                 </div>
                             </div>
                         </div>
@@ -264,7 +243,7 @@
     </div>
 
     <script>
-function updateBattery(level, charging = false) {
+        function updateBattery(level, charging = false) {
             var batteryPercent = document.getElementById('battery-percent');
             var batteryLevel = document.getElementById('battery-level');
             var batteryLoading = document.getElementById('loading');
@@ -363,6 +342,30 @@ function updateBattery(level, charging = false) {
                     chart.update();
                 }
             });
+
+            document.getElementById('start').addEventListener('click', function() {
+                if (this.classList.contains('btn-success')){//start
+                    this.classList.remove('btn-success');
+                    this.classList.add('btn-danger');
+                    this.innerHTML = 'stop';
+                    websocket.send(JSON.stringify({ type: "trigger", value: "start" }));
+                }
+                else{
+                    this.classList.remove('btn-danger');
+                    this.classList.add('btn-success');
+                    this.innerHTML = 'start';
+                    websocket.send(JSON.stringify({ type: "trigger", value: "stop" }));
+                }
+            });
+        }
+        
+        function ping() {
+            websocket.send('__ping__');
+            tm = setTimeout(function () { }, 5000);
+        }
+
+        function pong() {
+            clearTimeout(tm);
         }
 
         //callbacks for socket communication
@@ -372,15 +375,19 @@ function updateBattery(level, charging = false) {
             websocket.onopen = onOpen;
             websocket.onclose = onClose;
             websocket.onmessage = onMessage;
+            websoket.on()
         }
 
         //request all data when socket opens
         function onOpen(event) {
             console.log('Connection opened');
+            setInterval(ping, 2000);
             //anfrage für IO werte stellen
             //var msg = { data: "getAll" };
             //websocket.send(JSON.stringify(msg));
-            websocket.send('hi');
+            document.getElementById('battery').classList.remove('hide');
+            document.getElementById('error').classList.add('hide');
+            updateBattery(50, true);
         }
 
         //gets called on websocket connection lost
@@ -388,19 +395,26 @@ function updateBattery(level, charging = false) {
             console.log('Connection closed');
             //try to connect again after connection lost
             setTimeout(initWebSocket, 2000);
+            document.getElementById('battery').classList.add('hide');
+            document.getElementById('error').classList.remove('hide');
         }
 
         //recived new message through websocket
         function onMessage(event) {
-            console.log(event.data);
-            var recivedData = JSON.parse(event.data);
-            //console.log("id:" + recivedData.id + "|data:" + recivedData.data);
-            console.log(recivedData.CH1);
-            console.log(recivedData.CH2);
-            if (showCH1) {data.series[0] = recivedData.CH1;}
-            if (showCH2) {data.series[2] = recivedData.CH2;}
-            if (recivedData.status = "battery"){updateBattery(recivedData.level, recivedData.charging);}
-            chart.update();
+            if (event.data == '__pong__') {
+                pong();
+                return;
+            } else{
+                console.log(event.data);
+                var recivedData = JSON.parse(event.data);
+                //console.log("id:" + recivedData.id + "|data:" + recivedData.data);
+                console.log(recivedData.CH1);
+                console.log(recivedData.CH2);
+                if (showCH1) {data.series[0] = recivedData.CH1;}
+                if (showCH2) {data.series[2] = recivedData.CH2;}
+                //if (recivedData.status = "battery"){updateBattery(recivedData.level, recivedData.charging);}
+                chart.update();
+            }
         }
 
         //callback when website gets loaded and closed
@@ -409,7 +423,7 @@ function updateBattery(level, charging = false) {
 
         //init all when loading side
         function onLoad(event) {
-            //initWebSocket();
+            initWebSocket();
             initElements();
         }
 
